# psnet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
choco/: psnet.nuspec
choco/tools/: VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
data/: fingerprints.json  oui.txt  wappalyzer.json  wappalyzer_headers.txt
scripts/: sync_wappalyzer.py
src/: app.rs  main.rs  types.rs  utils.rs
src/network/: alerts.rs  bandwidth.rs  capture.rs  connections.rs  dns.rs  firewall.rs  geoip.rs  hostnames.rs  mod.rs  oui.rs  protocols.rs  scanner.rs  sniffer.rs  speed.rs  system_monitor.rs  threats.rs  usage.rs
src/network/networks/: adapters.rs  bluetooth.rs  docker.rs  hotspot.rs  hyperv.rs  meshvpn.rs  mod.rs  probes.rs  tunnel.rs  vpn.rs  wsl.rs
src/network/servers/: classify.rs  fingerprint.rs  fingerprints.rs  listeners.rs  mod.rs  types.rs  wappalyzer_db.rs
src/ui/: alerts.rs  capture.rs  connections.rs  dashboard.rs  detail_popup.rs  devices.rs  firewall.rs  mod.rs  networks.rs  packets.rs  packets_tab.rs  servers.rs  speed.rs  status.rs  title.rs  topology.rs  usage.rs
src/ui/widgets/: bar_chart.rs  conn_stats.rs  data_rates.rs  health_gauge.rs  mod.rs  network_pulse.rs  protocol_cloud.rs  traffic_chart.rs  world_map.rs
