[package]
name = "psnet"
version = "0.2.0"
edition = "2021"
description = "A beautiful real-time TUI network monitor for Windows PowerShell — built in Rust"
license = "MIT"
repository = "https://github.com/marlocarlo/psnet"
homepage = "https://github.com/marlocarlo/psnet"
readme = "README.md"
keywords = ["network", "monitor", "tui", "windows", "terminal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
