[package]
name = "psnet"
version = "0.3.0"
edition = "2021"
description = "A beautiful real-time TUI network monitor for Windows PowerShell — built in Rust"
license = "MIT"
repository = "https://github.com/marlocarlo/psnet"
homepage = "https://github.com/marlocarlo/psnet"
readme = "README.md"
keywords = ["network", "monitor", "tui", "windows", "terminal"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".github/", "choco/", "target/", "image.png", ".playwright-mcp/"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
maxminddb = "0.24"
dns-lookup = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
